--- a/app/index.html
+++ b/app/index.html
@@ -80,35 +80,144 @@
         </div>
     </div>
 
-    <!--<footer class="footer">-->
-        <!--<div class="wrapper">-->
-            <!--<div class="info">-->
-                <!--<p class="copyright">© 2012–2013 ЗАО «Компания» </p>-->
-                <!--<a href="mailto:info@name.ru">info@name.ru</a>-->
-            <!--</div>-->
+    <div class="content">
+        <div class="wrapper">
+            <ul class="breadcrumbs">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Бытовая техника</a></li>
+            </ul>
+            <div class="left-block">
+                <h3 class="left-block-title">
+                    Автомобили
+                </h3>
+                <ul class="products-navigation">
+                    <li>
+                        <a href="#">Бытовая техника</a>
+                        <ul class="category-navigation">
+                            <li><a href="#">Микроволновки</a></li>
+                            <li><a href="#">Холодильники</a></li>
+                            <li><a href="#">Посудомоечные машины</a></li>
+                            <li><a href="#">Чайники</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Мобильная техника</a></li>
+                    <li><a href="#">Компьютеры</a></li>
+                    <li><a href="#">Одежда</a></li>
+                    <li><a href="#">Недвижимость</a></li>
 
-            <!--<div class="footer-navigation">-->
-                <!--<ul>-->
-                    <!--<li><a href="#">Главная</a></li>-->
-                    <!--<li><a href="#">Каталог</a></li>-->
-                    <!--<li><a href="#">Доставка и оплата</a></li>-->
-                    <!--<li><a href="#">Прайс-лист</a></li>-->
-                    <!--<li><a href="#">Контакты</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
+                </ul>
 
-            <!--<div class="footer-logo">-->
-                <!--&lt;!&ndash;<img src="./img/companyimg.png" alt="company" class="footer-logo-img">&ndash;&gt;-->
-                <!--<img src="./img/company.png" alt="Logo" class="logo">-->
-                <!--<div class="description">-->
-                    <!--<p><a href="#">Разработка сайта — </a></p>-->
-                    <!--<p>компания «Пиксель Плюс»</p>-->
-                <!--</div>-->
+                <div class="price-list">
+                    <img src="./img/price-list.png" alt="price-list">
+                    <p>Прайс-лист</p>
+                </div>
+            </div>
+            <div class="right-block">
+                <div class="product">
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
+                    <p class="price">1 900 р.</p>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                </div>
+                <div class="product">
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
+                    <p class="price">1 900 р.</p>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                </div>
+                <div class="product">
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
+                    <p class="price">1 900 р.</p>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                </div>
 
-            <!--</div>-->
+                <div class="product">
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
+                    <p class="price">1 900 р.</p>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                </div>
+                <div class="product">
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
+                    <p class="price">1 900 р.</p>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                </div>
 
-        <!--</div>-->
-    <!--</footer>-->
+                <div class="clearfix"></div>
+
+                <ul class="pager">
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">6</a></li>
+                    <li><a href="#">7</a></li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
+<div class="clearfix"></div>
+<div class="wrapper">
+    <div class="company-description">
+
+        <p class="description-content">
+            Компания «Пиксель Плюс» существует более 6 лет, за это
+            время мы принимали участие в разработке более чем 700 сайтов,
+            поэтому можем уверенно называть себя профессионалами.
+            На данный момент наш коллектив состоит из более чем 30
+            сотрудников работающих в двух офисах в Москве и
+            Зеленограде.характерные для этого жанра мотивы: неразделённой любви,
+            ухода молодости, угасания души.
+        </p>
+
+        <div class="description-content">
+            Одним из основных направлений работ нашей компании является поисковое
+            продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными
+            клиентами по более чем 11 000 поисковым запросам.
+            При этом в работе основной акцент мы делаем на качестве работ,
+            а так же применяем собственные уникальные разработки в области SEO продвижения.
+            На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста,
+            преимущественно работающих в нашем московском офисе.
+        </div>
+
+    </div>
+</div>
+<div class="clearfix"></div>
+<footer class="footer">
+    <div class="wrapper">
+        <div class="info">
+            <p class="copyright">© 2012–2013 ЗАО «Компания» </p>
+            <a href="mailto:info@name.ru">info@name.ru</a>
+        </div>
+
+        <div class="footer-navigation">
+            <ul>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Доставка и оплата</a></li>
+                <li><a href="#">Прайс-лист</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-logo">
+            <!--<img src="./img/companyimg.png" alt="company" class="footer-logo-img">-->
+            <img src="./img/company.png" alt="Logo" class="logo">
+            <div class="description">
+                <p><a href="#">Разработка сайта — </a></p>
+                <p>компания «Пиксель Плюс»</p>
+            </div>
+
+        </div>
+
+    </div>
+</footer>
 
 
 
