add cleartime to the slider

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,8 @@
         </form>
     </div>
 </div>
+
+<div class="main-wrapper">
     <header class="header">
         <div class="wrapper">
             <img src="./img/logo.png" alt="Logo" class="logo">
@@ -76,6 +78,9 @@
             </div>
             <div class="slide">
                 <img src="./img/slide_1.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./img/slide_2.png" alt="">
             </div>
         </div>
     </div>
@@ -219,7 +224,7 @@
     </div>
 </footer>
 
-
+</div>
 
     <script src="./js/common.js"></script>
 </body>
