--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="./css/all.css">
 </head>
 <body>
-<div class="popup" id="popup">
+<div class="popup" id="popup" >
+
+    <div class="popup-mask" id="popup-mask"></div>
+
     <div class="form-wraрpper">
         <div class="close" id="close">
             <img src="./img/close.png" alt="close">
