glad to fix bug

--- a/app/index.html
+++ b/app/index.html
@@ -65,25 +65,13 @@
                 <img src="./img/arrow-left.png" alt="arrow-left" id="arrow-left">
             </div>
             <div class="arrow arrow-right">
-                <img src="./img/arrow-right.png" alt="arrow-right" id="arrow-right">
+                <img src="./img/arrow-right.png" alt="arrow-right" id="arrow-right" height="61">
             </div>
             <div class="slide show">
-                <img src="./img/slide_1.png" alt="">
+                <img src="./img/slide_1.png" alt="slide" width="1248" height="462">
             </div>
             <div class="slide">
-                <img src="./img/slide_2.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/slide_1.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/slide_2.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/slide_1.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./img/slide_2.png" alt="">
+                <img src="./img/slide_2.png" alt="slide" width="1248" height="462">
             </div>
         </div>
     </div>
@@ -117,41 +105,41 @@
                 </ul>
 
                 <div class="price-list">
-                    <img src="./img/price-list.png" alt="price-list">
+                    <img src="./img/price-list.png" alt="price-list" width="97" height="111">
                     <p>Прайс-лист</p>
                 </div>
             </div>
             <div class="right-block">
                 <div class="product">
-                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo" width="210" height="209"> </a>
                     <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
                     <p class="price">1 900 р.</p>
-                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket" width="28" height="21"></a>
                 </div>
                 <div class="product">
-                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo" width="210" height="209"> </a>
                     <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
                     <p class="price">1 900 р.</p>
-                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket" width="28" height="21"></a>
                 </div>
                 <div class="product">
-                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo" width="210" height="209"> </a>
                     <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
                     <p class="price">1 900 р.</p>
-                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket" width="28" height="21"></a>
                 </div>
 
                 <div class="product">
-                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo" width="210" height="209"> </a>
                     <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
                     <p class="price">1 900 р.</p>
-                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket" width="28" height="21"></a>
                 </div>
                 <div class="product">
-                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo"> </a>
+                    <a href="#" class="photo"> <img src="./img/nophoto.png" alt="no-photo" width="210" height="209"> </a>
                     <p class="description"><a href="#"> Самый клевый чайник, который надо купить! </a> </p>
                     <p class="price">1 900 р.</p>
-                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket"></a>
+                    <a href="#" class="basket"><img src="./img/addtobasket_mini.png" alt="add to basket" width="28" height="21"></a>
                 </div>
 
                 <div class="clearfix"></div>
